refactor(AssessmentTable): fix IDE warnings & other minor changes